--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,11 +79,11 @@
 }
 
 .black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all duration-300 hover:bg-white hover:text-black hover:font-extrabold text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all duration-500 hover:bg-black hover:text-white hover:font-extrabold text-center text-sm font-inter flex items-center justify-center;
 }
 
 .head_text {
@@ -146,7 +146,7 @@
 }
 
 .dropdown_link {
-  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
+  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium hover:font-extrabold transition-all;
 }
 
 /* PromptCard Component */
@@ -168,4 +168,9 @@
 
 .flex-between {
   @apply flex justify-between items-center;
+}
+
+/* Profile Picture */
+.profile_pic {
+  @apply rounded-full object-cover transition duration-300 ease-in-out hover:shadow-[0_0_10px_5px_rgba(105,105,105,0.5)] hover:opacity-90;
 }
